@startuml
'http://plantuml.com/skinparam.html
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

class ChangeUserStateUI <<presentation>>
class ChangeUserStateController <<application>>
class AuthzRegistry <<util>>
class AuthorizationService <<service>>
class "user:User" <<domain>>
class PersistenceContext  <<persistence>>
class RepositoryFactory  <<factory>>
class UserRepository <<repository>>

ChangeUserStateUI --> ChangeUserStateController : theController
ChangeUserStateController --> UserRepository: repo
ChangeUserStateController --> AuthorizationService: theAuthzService
ChangeUserStateController --> PersistenceContext: persistence
ChangeUserStateController --> "user:User"
PersistenceContext --> RepositoryFactory: factory
RepositoryFactory --> UserRepository: repo
ChangeUserStateController --> AuthzRegistry: registry

ChangeUserStateUI : doShow()
ChangeUserStateController : enableUserByEmail(String)
AuthzRegistry : authorizationService()
AuthorizationService : ensureAuthenticatedUserHasAnyOf(Role...))
PersistenceContext : repositories()
RepositoryFactory : users()
"user:User" : enable()
"user:User" : disable()
UserRepository : findUserByEmail(email)
UserRepository : save(User)

@enduml
